--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <ul class="gallery"></ul>
+    <ul>
+      <li><a href="1-gallery.html">1-gallery</a></li>
+      <li><a href="2-form.html">2-form</a></li>
+    </ul>
 
     <script type="module" src="./main.js"></script>
   </body>
